added inline button create a record. update method mensHaircuit()